(evilcss-std) supports preventing font resize on Safari iOS

--- a/packages/evilcss-std/reset/html-font.css
+++ b/packages/evilcss-std/reset/html-font.css
@@ -1,1 +1,4 @@
-html { font-size: 100%; }
+html {
+    font-size: 100%;
+    -webkit-text-size-adjust: 100%; /* Prevents Safari iOS from resizing fonts on device rotation. */
+}
